# rsshim

./: Cargo.toml
src/: cargo_toml.rs  config.rs  lib.rs  main.rs  option_parser.rs  rsshim-default.toml  rsshim_env.rs  rsshim_exec.rs  tests.rs  utils.rs
src/baz/: any.rs
src/rsshim_env/: tests.rs
src/rsshim_exec/: tests.rs
src/test_data/install_basic/prj/: Cargo.toml
src/utils/: tests.rs
