[package]
name = "rsshim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
shellexpand = "2.1"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
filetime = "0.2"
fs_extra = "1.2"
glob = { version = "0.3" }
home = "0.5"
scopeguard = "1.1"
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.0"
tempdir = "0.3"
toml = "0.5"
toml_edit = "0.14"
xshell = "0.2"
