[package]
name = "rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"

[[bin]]
name = "foo"
path = "src/foo/bin/main.rs"

[[bin]]
name = "bar"
path = "src/bar/bin/main.rs"

# bar is missing

[[bin]]
name = "not_exists"
path = "src/not_exists/bin/main.rs"
